minor to use debug mode

--- a/train_online.ipynb
+++ b/train_online.ipynb
@@ -26,10 +26,11 @@
     "options = MonodepthOptions()\n",
     "args = [\n",
     "    '--data_path', '/mnt/nct-zfs/TCO-All/SharedDatasets/SCARED_Images_Resized/',\n",
-    "    '--batch_size', '2', \n",
-    "    '--batch_size', '1', \n",
-    "    '--log_frequency', '2',\n",
-    "    '--log_dir', '/mnt/nct-zfs/TCO-Test/jinjingxu/exps/train/mvp3r/results/debug_reloc3r_backbone/relocxr',\n",
+    "    # '--batch_size', '2', \n",
+    "    # '--batch_size', '1', \n",
+    "    # '--log_frequency', '2',\n",
+    "    # '--log_dir', '/mnt/nct-zfs/TCO-Test/jinjingxu/exps/train/mvp3r/results/debug_reloc3r_backbone/relocxr',\n",
+    "    '--debug',\n",
     "    ]\n",
     "opts = options.parse_notebook(args)# trainer.set_eval()\n",
     "# opts"
@@ -89,7 +90,8 @@
     "    epoch = self.epoch\n",
     "    print(\"Training\")\n",
     "\n",
-    "    optimizer.zero_grad()# debug only: save_mem\n",
+    "    self.model_optimizer_0.zero_grad()# debug only: save_mem\n",
+    "    self.model_optimizer.zero_grad()# debug only: save_mem\n",
     "\n",
     "    for batch_idx, inputs in enumerate(self.train_loader):\n",
     "\n",
@@ -97,7 +99,8 @@
     "\n",
     "        # position\n",
     "        self.set_train_0()\n",
-    "        self.freeze_params(keys = ['position_encoder'])#debug only to save_mem\n",
+    "        if self.opt.debug:\n",
+    "            self.freeze_params(keys = ['position_encoder'])#debug only to save_mem\n",
     "        _, losses_0 = self.process_batch_0(inputs)\n",
     "        self.model_optimizer_0.zero_grad()\n",
     "        losses_0[\"loss\"].backward()#\n",
@@ -105,7 +108,8 @@
     "        self.model_optimizer_0.step()\n",
     "\n",
     "        self.set_train()\n",
-    "        self.freeze_params(keys = ['depth_model', 'pose', 'transform_encoder'])#debug only to save_mem\n",
+    "        if self.opt.debug:\n",
+    "            self.freeze_params(keys = ['depth_model', 'pose', 'transform_encoder'])#debug only to save_mem\n",
     "        outputs, losses = self.process_batch(inputs)\n",
     "        self.model_optimizer.zero_grad()\n",
     "        losses[\"loss\"].backward()\n",
@@ -206,7 +210,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cu12",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
