--- a/train_online.ipynb
+++ b/train_online.ipynb
@@ -26,7 +26,7 @@
     "options = MonodepthOptions()\n",
     "args = [\n",
     "    '--data_path', '/mnt/nct-zfs/TCO-All/SharedDatasets/SCARED_Images_Resized/',\n",
-    "    # '--batch_size', '2', \n",
+    "    '--of_samples_num', '3', \n",
     "    # '--batch_size', '1', \n",
     "    # '--log_frequency', '2',\n",
     "    # '--log_dir', '/mnt/nct-zfs/TCO-Test/jinjingxu/exps/train/mvp3r/results/debug_reloc3r_backbone/relocxr',\n",
