Enhance Trainer to return pose error metrics and update logging for training losses

--- a/train_online.ipynb
+++ b/train_online.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
     "    self.set_train()\n",
     "    if self.opt.debug:\n",
     "        self.freeze_params(keys = ['depth_model', 'pose', 'transform_encoder'])#debug only to save_mem\n",
-    "    outputs, losses = self.process_batch(inputs)\n",
+    "    outputs, losses, errs = self.process_batch(inputs)\n",
     "    self.model_optimizer.zero_grad()\n",
     "    # losses[\"loss\"].backward() #debug only\n",
     "    torch.nn.utils.clip_grad_norm_(self.parameters_to_train, max_norm=1.0)\n",
@@ -117,6 +117,11 @@
     "\n",
     "    # self.log_time(batch_idx, duration, losses[\"loss\"].cpu().data)\n",
     "    concat_img, img_order_strs = self.log(\"train\", inputs, outputs, losses, compute_vis=True, online_vis=False)\n",
+    "    #compute_pose_err\n",
+    "    print('trans_err:', errs[\"trans_err\"])\n",
+    "    print('rot_err:', errs[\"rot_err\"])\n",
+    "    # print('trans_err:', outputs[(\"trans_err\", 0)])\n",
+    "    # print('rot_err:', outputs[(\"rot_err\", 0)])\n",
     "\n",
     "    import os, cv2\n",
     "    save_path = \"/mnt/cluster/workspaces/jinjingxu/proj/UniSfMLearner/submodule/Endo_FASt3r/\"\n",
@@ -216,7 +221,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cu12",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
