Add RAFT optical flow support in options and Trainer. Update training logic to conditionally use RAFT or custom networks for pose estimation. Refactor related methods for improved clarity and functionality.

--- a/train_online.ipynb
+++ b/train_online.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
     "    self.set_train()\n",
     "    if self.opt.debug:\n",
     "        self.freeze_params(keys = ['depth_model', 'pose', 'transform_encoder'])#debug only to save_mem\n",
-    "    outputs, losses, errs = self.process_batch(inputs)\n",
+    "    outputs, losses= self.process_batch(inputs)\n",
     "    self.model_optimizer.zero_grad()\n",
     "    # losses[\"loss\"].backward() #debug only\n",
     "    torch.nn.utils.clip_grad_norm_(self.parameters_to_train, max_norm=1.0)\n",
@@ -113,18 +113,62 @@
     "\n",
     "    # phase = batch_idx % self.opt.log_frequency == 0\n",
     "\n",
-    "    # if phase:\n",
+    "    # # if phase:\n",
+    "    # # self.log_time(batch_idx, duration, losses[\"loss\"].cpu().data)\n",
+    "    # self.log_time(0, duration, losses[\"loss\"].cpu().data, losses_0[\"loss\"].cpu().data, )\n",
+    "    # scalers_to_log = {\n",
+    "    #     \"scalar/loss\": losses[\"loss\"],\n",
+    "    #     \"scalar/loss_0\": losses_0[\"loss\"],\n",
+    "    #     # \"scalar/trans_err\": metric_errs[\"trans_err\"].mean(),\n",
+    "    #     # \"scalar/rot_err\": metric_errs[\"rot_err\"].mean()\n",
+    "    # }\n",
+    "    # for k, v in errs.items():\n",
+    "    #     print(f\"scalar/{k}: {v}\")\n",
+    "    #     scalers_to_log[f\"scalar/{k}\"] = v\n",
+    "    # concat_img, img_order_strs = self.log(\"train\", inputs, outputs, scalers_to_log, compute_vis=True, online_vis=False)\n",
+    "    \n",
+    "    \n",
+    "    # Use the accumulated loss for logging (multiply back to show effective loss)\n",
+    "    # effective_loss = losses[\"loss\"] * (self.opt.accumulate_steps / max(1, accumulate_step % self.opt.accumulate_steps))\n",
+    "    # self.log_time(batch_idx, duration, effective_loss.cpu().data)\n",
+    "    losses_to_log = {\n",
+    "        \"loss\": losses[\"loss\"],\n",
+    "        \"loss_0\": losses_0[\"loss\"],\n",
+    "    }\n",
+    "    errs_to_log = {}\n",
+    "    errs = self.compute_pose_metrics(inputs, outputs)\n",
+    "    for k, v in errs.items():\n",
+    "        assert len(v) == len(self.opt.frame_ids)-1, f'{k}: {v}'\n",
+    "        # v is a list of torch tensors, average over them\n",
+    "        errs_to_log[f\"{k}\"] = torch.mean(torch.stack(v)).item()\n",
     "\n",
-    "    # self.log_time(batch_idx, duration, losses[\"loss\"].cpu().data)\n",
-    "    concat_img, img_order_strs = self.log(\"train\", inputs, outputs, losses, compute_vis=True, online_vis=False)\n",
-    "    #compute_pose_err\n",
-    "    print('trans_err:', errs[\"trans_err\"])\n",
-    "    print('rot_err:', errs[\"rot_err\"])\n",
+    "    self.log_time(self.step, duration, losses[\"loss\"].cpu().data, losses_0[\"loss\"].cpu().data, \n",
+    "                    errs_to_log)\n",
+    "    scalers_to_log = {**losses_to_log, **errs_to_log}\n",
+    "    scalers_to_log = {f\"scalar/{k}\": v for k, v in scalers_to_log.items()}\n",
+    "\n",
+    "    concat_img, img_order_strs = self.log(\"train\", inputs, outputs, \n",
+    "                scalers_to_log, \n",
+    "                compute_vis=True)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    # #compute_pose_err\n",
+    "    for k, v in errs.items():\n",
+    "        print(f\"{k}: {v}\")\n",
+    "\n",
     "    # print('trans_err:', outputs[(\"trans_err\", 0)])\n",
     "    # print('rot_err:', outputs[(\"rot_err\", 0)])\n",
     "\n",
+    " \n",
+    "\n",
+    "\n",
     "    import os, cv2\n",
     "    save_path = \"/mnt/cluster/workspaces/jinjingxu/proj/UniSfMLearner/submodule/Endo_FASt3r/\"\n",
+    "    # remove the first char before the first _\n",
+    "    # img_order_strs = img_order_strs.split('_')[1:]\n",
+    "    # img_order_strs = '_'.join(img_order_strs)\n",
     "    save_path = os.path.join(save_path, f\"{img_order_strs}.png\")\n",
     "    cv2.imwrite(save_path, concat_img)\n",
     "    print(f\"saved train_concat_img.png in {save_path}\")\n",
@@ -138,7 +182,8 @@
     "\n",
     "    # if (self.epoch + 1) % self.opt.save_frequency == 0:\n",
     "    #     self.save_model()\n",
-    "    # break\n"
+    "    # break\n",
+    "    \n"
    ]
   },
   {
@@ -150,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +266,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "cu12",
    "language": "python",
    "name": "python3"
   },
