--- a/train_online.ipynb
+++ b/train_online.ipynb
@@ -14,43 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-09-12 21:37:20.289551: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1757705840.302779 2393174 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1757705840.306791 2393174 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "W0000 00:00:1757705840.317117 2393174 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1757705840.317134 2393174 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1757705840.317135 2393174 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1757705840.317137 2393174 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "2025-09-12 21:37:20.320329: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning, cannot find cuda-compiled version of RoPE2D, using a slow pytorch version instead\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'endovis'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from __future__ import absolute_import, division, print_function\n",
     "import torch\n",
@@ -73,148 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DEBUG MODE\n",
-      "update options for debug purposes...\n",
-      "1234 is the seed!\n",
-      "learning rate: 0.0001\n",
-      "batch size is: 2\n",
-      "accumulate steps is: 4\n",
-      "effective batch size is: 8\n",
-      "Using DoMoRA\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/cluster/workspaces/jinjingxu/proj/UniSfMLearner/submodule/Endo_FASt3r/trainer_end_to_end.py:311: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  depth_model_dict = torch.load(depth_model_path)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DARES_MoDoRA\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/cluster/environments/jinjingxu/pkg/envs/cu12/lib/python3.11/site-packages/torch/nn/utils/weight_norm.py:143: FutureWarning: `torch.nn.utils.weight_norm` is deprecated in favor of `torch.nn.utils.parametrizations.weight_norm`.\n",
-      "  WeightNorm.apply(module, name, dim)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DoRA params initialized!\n",
-      "DoRA rank is: [14, 14, 12, 12, 10, 10, 8, 8, 8, 8, 8, 8]\n",
-      "DAM mora rank is  [14, 14, 12, 12, 10, 10, 8, 8, 8, 8, 8, 8]\n",
-      "Vector MoRA params initialized!\n",
-      "MoDoRA in Depth model\n",
-      "loaded endofast3r_depth_trained_dbg depth model...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/cluster/workspaces/jinjingxu/proj/UniSfMLearner/submodule/Endo_FASt3r/trainer_end_to_end.py:350: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  self.models[\"position_encoder\"].load_state_dict(torch.load(f\"{AF_PRETRAINED_ROOT}/position_encoder.pth\"))\n",
-      "/mnt/cluster/workspaces/jinjingxu/proj/UniSfMLearner/submodule/Endo_FASt3r/trainer_end_to_end.py:356: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  self.models[\"position\"].load_state_dict(torch.load(f\"{AF_PRETRAINED_ROOT}/position.pth\"))\n",
-      "/mnt/cluster/workspaces/jinjingxu/proj/UniSfMLearner/submodule/Endo_FASt3r/trainer_end_to_end.py:386: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  self.models[\"transform_encoder\"].load_state_dict(torch.load(f\"{AF_PRETRAINED_ROOT}/transform_encoder.pth\"))\n",
-      "/mnt/cluster/workspaces/jinjingxu/proj/UniSfMLearner/submodule/Endo_FASt3r/trainer_end_to_end.py:393: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  self.models[\"transform\"].load_state_dict(torch.load(f\"{AF_PRETRAINED_ROOT}/transform.pth\"))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CHECK: NO self.opt.predictive_mask\n",
-      "Model: depth_model\n",
-      "  Total params: 24981153 (23.82 MB)\n",
-      "  Total params trainable: 2933793 (2.80 MB)\n",
-      "Model: position_encoder\n",
-      "  Total params: 11698920 (11.16 MB)\n",
-      "  Total params trainable: 11698920 (11.16 MB)\n",
-      "Model: position\n",
-      "  Total params: 3154888 (3.01 MB)\n",
-      "  Total params trainable: 3154888 (3.01 MB)\n",
-      "Model: motion_position_encoder\n",
-      "  Total params: 11698920 (11.16 MB)\n",
-      "  Total params trainable: 11698920 (11.16 MB)\n",
-      "Model: motion_position\n",
-      "  Total params: 3154888 (3.01 MB)\n",
-      "  Total params trainable: 3154888 (3.01 MB)\n",
-      "Model: transform_encoder\n",
-      "  Total params: 11698920 (11.16 MB)\n",
-      "  Total params trainable: 11698920 (11.16 MB)\n",
-      "Model: transform\n",
-      "  Total params: 3157052 (3.01 MB)\n",
-      "  Total params trainable: 3157052 (3.01 MB)\n",
-      "Model: pose_encoder\n",
-      "  Total params: 11698920 (11.16 MB)\n",
-      "  Total params trainable: 11698920 (11.16 MB)\n",
-      "Model: pose\n",
-      "  Total params: 1314572 (1.25 MB)\n",
-      "  Total params trainable: 1314572 (1.25 MB)\n",
-      "Total params: 82558233 (78.73 MB)\n",
-      "Total params trainable: 60510873 (57.71 MB)\n",
-      "Training model named:\n",
-      "   debug_geoaware_in_unireloc3r\n",
-      "Models and tensorboard events files are saved to:\n",
-      "   /home/jinjingxu/tmp\n",
-      "Training is using:\n",
-      "   cuda\n",
-      "use only of_samples_num samples for OF, for OF training...\n",
-      "using 8 samples for OF, for speed up training..\n",
-      "Loading trajectories for 8 unique folders...\n",
-      "Successfully loaded 8 trajectories\n",
-      "Loaded 8 trajectories\n",
-      "use only of_samples_num samples for OF, for OF training...\n",
-      "using 8 samples for OF, for speed up training..\n",
-      "Loading trajectories for 1 unique folders...\n",
-      "Successfully loaded 1 trajectories\n",
-      "Loaded 1 trajectories\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/cluster/workspaces/jinjingxu/proj/UniSfMLearner/submodule/Endo_FASt3r/trainer_end_to_end.py:407: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  self.models[\"pose_encoder\"].load_state_dict(torch.load(pose_encoder_path))\n",
-      "/mnt/cluster/workspaces/jinjingxu/proj/UniSfMLearner/submodule/Endo_FASt3r/trainer_end_to_end.py:416: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  self.models[\"pose\"].load_state_dict(torch.load(pose_decoder_path))\n",
-      "/mnt/cluster/environments/jinjingxu/pkg/envs/cu12/lib/python3.11/site-packages/torch/functional.py:534: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at /opt/conda/conda-bld/pytorch_1729647348947/work/aten/src/ATen/native/TensorShape.cpp:3595.)\n",
-      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using dataset:\n",
-      "   endovis\n",
-      "There are 8 training items and 8 validation items\n",
-      "\n",
-      "trainer initialized...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load model\n",
     "trainer = Trainer(opts)\n",
@@ -223,73 +50,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('separate_resnet', 'vanilla_pose_head_regression')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# opts.pose_model_type\n",
-    "trainer.opt.pose_model_type,trainer.opt.unireloc3r_pose_estimation_mode"
+    "trainer.opt.pose_model_type,trainer.opt.unireloc3r_pose_estimation_mode,trainer.opt.enable_all_depth,trainer.opt.enable_motion_computation,trainer.opt.enable_mutual_motion"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training\n",
-      "////frame_id as src: -1\n",
-      "gt_tgt2src_rel_poses trans:\n",
-      "tensor([[-0.2108,  0.3493, -0.0364],\n",
-      "        [-0.0121, -0.0086, -0.1336]], device='cuda:0')\n",
-      "pred_rel_poses_batch trans:\n",
-      "tensor([[ 4.4339e-04,  1.2005e-03,  3.5292e-04],\n",
-      "        [-6.1490e-05, -1.0257e-04, -4.7942e-04]], device='cuda:0')\n",
-      "////frame_id as src: 1\n",
-      "gt_tgt2src_rel_poses trans:\n",
-      "tensor([[ 0.0868, -0.2566,  0.0505],\n",
-      "        [ 0.0143,  0.0159,  0.1047]], device='cuda:0')\n",
-      "pred_rel_poses_batch trans:\n",
-      "tensor([[-3.4912e-04, -9.3808e-04,  1.4232e-04],\n",
-      "        [ 1.4375e-04, -1.3884e-05,  4.9114e-04]], device='cuda:0')\n",
-      "Report all metrics:\n",
-      "trans_err_ang_deg: [tensor(32.0934, device='cuda:0'), tensor(26.1969, device='cuda:0')]\n",
-      "trans_err_scale: [tensor(0.2714, device='cuda:0'), tensor(0.1906, device='cuda:0')]\n",
-      "rot_err_deg: [tensor(0.1707, device='cuda:0'), tensor(0.1093, device='cuda:0')]\n",
-      "pred_rel_trans_scale: [tensor(0.0009, device='cuda:0'), tensor(0.0008, device='cuda:0')]\n",
-      "pred_f0_depth_scale: [tensor(0.2546, device='cuda:0'), tensor(0.2546, device='cuda:0')]\n",
-      "pred_f0_cam_points_x_mean: [tensor(0.0004, device='cuda:0'), tensor(0.0004, device='cuda:0')]\n",
-      "pred_f0_cam_points_y_mean: [tensor(-0.0041, device='cuda:0'), tensor(-0.0041, device='cuda:0')]\n",
-      "pred_f0_cam_points_z_mean: [tensor(0.2546, device='cuda:0'), tensor(0.2546, device='cuda:0')]\n",
-      "epoch   0 | batch      0 | examples/s:  10.7 | loss: 0.00634 | loss_0: 0.00753 | time elapsed: 00h00m01s | time left: 00h00m00s\n",
-      "  Pose Errors: trans_err_ang_deg: 29.145 | trans_err_scale: 0.231 | rot_err_deg: 0.140 | pred_rel_trans_scale: 0.001 | pred_f0_depth_scale: 0.255 | pred_f0_cam_points_x_mean: 0.000 | pred_f0_cam_points_y_mean: -0.004 | pred_f0_cam_points_z_mean: 0.255 | \n",
-      "trans_err_ang_deg: [tensor(32.0934, device='cuda:0'), tensor(26.1969, device='cuda:0')]\n",
-      "trans_err_scale: [tensor(0.2714, device='cuda:0'), tensor(0.1906, device='cuda:0')]\n",
-      "rot_err_deg: [tensor(0.1707, device='cuda:0'), tensor(0.1093, device='cuda:0')]\n",
-      "pred_rel_trans_scale: [tensor(0.0009, device='cuda:0'), tensor(0.0008, device='cuda:0')]\n",
-      "pred_f0_depth_scale: [tensor(0.2546, device='cuda:0'), tensor(0.2546, device='cuda:0')]\n",
-      "pred_f0_cam_points_x_mean: [tensor(0.0004, device='cuda:0'), tensor(0.0004, device='cuda:0')]\n",
-      "pred_f0_cam_points_y_mean: [tensor(-0.0041, device='cuda:0'), tensor(-0.0041, device='cuda:0')]\n",
-      "pred_f0_cam_points_z_mean: [tensor(0.2546, device='cuda:0'), tensor(0.2546, device='cuda:0')]\n",
-      "saved Src-Colored_Tgt-Tgt-Registered_Tgt-Refined_Tgt-Colored_Motion_Tgt-Optic_Flow-Pose_Flow-Occlursion_Mask-Depth-Brightness-Motion_Flow-Motion_Mask-.png in /home/jinjingxu/tmp/debug_geoaware_in_unireloc3r/0912-213726/imgs/0_Src-Colored_Tgt-Tgt-Registered_Tgt-Refined_Tgt-Colored_Motion_Tgt-Optic_Flow-Pose_Flow-Occlursion_Mask-Depth-Brightness-Motion_Flow-Motion_Mask-_0_-1.png\n",
-      "saved train_concat_img.png in /mnt/cluster/workspaces/jinjingxu/proj/UniSfMLearner/submodule/Endo_FASt3r/Src-Colored_Tgt-Tgt-Registered_Tgt-Refined_Tgt-Colored_Motion_Tgt-Optic_Flow-Pose_Flow-Occlursion_Mask-Depth-Brightness-Motion_Flow-Motion_Mask-_0_-1.png\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# trainer = Trainer(opts)\n",
     "self = trainer #Trainer(opts)\n",
@@ -439,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
