--- a/train_online.ipynb
+++ b/train_online.ipynb
@@ -31,10 +31,12 @@
     "    '--save_frequency', '100000',\n",
     "    '--of_samples',\n",
     "    '--of_samples_num', '300', \n",
+    "    # '--of_samples_num', '5', \n",
     "    # '--batch_size', '10', \n",
     "    '--enable_motion_computation', \n",
     "    '--use_raft_flow',\n",
     "    '--pose_model_type', 'endofast3r', \n",
+    "    '--pose_model_type', 'posetr_net', \n",
     "    '--frame_ids', '0', '-4', '4',\n",
     "    '--frame_ids', '0', '-1', '1',\n",
     "    '--dataset', 'StereoMIS',\n",
@@ -42,11 +44,13 @@
     "    '--data_path', '/mnt/nct-zfs/TCO-All/SharedDatasets/StereoMIS_DARES_test/',\n",
     "    '--dataset', 'DynaSCARED',\n",
     "    '--split_appendix', '_CaToTi001',\n",
-    "    '--split_appendix', '_CaToTi010',\n",
+    "    # '--split_appendix', '_CaToTi101',\n",
+    "    # '--split_appendix', '_CaToTi010',\n",
     "    '--data_path', '/mnt/cluster/datasets/Surg_oclr_stereo/',\n",
     "    '--dataset', 'StereoMIS',\n",
     "    '--split_appendix', '_offline',\n",
     "    '--data_path', '/mnt/nct-zfs/TCO-All/SharedDatasets/StereoMIS_DARES_test/',\n",
+    "    '--motion_mask_thre_px', '1',\n",
     "    # '--frame_ids', '0', '-1', '1',\n",
     "    # '--pose_model_type', 'separate_resnet', \n",
     "    # '--log_frequency', '2',\n",
@@ -55,7 +59,7 @@
     "    ]\n",
     "opts = options.parse_notebook(args)# trainer.set_eval()\n",
     "# # opts\n",
-    "opts.datasets, opts.frame_ids"
+    "opts.datasets, opts.frame_ids, opts.pose_model_type"
    ]
   },
   {
@@ -89,7 +93,7 @@
     "# load trained model for test\n",
     "import os\n",
     "traiend_models_root = '/mnt/nct-zfs/TCO-Test/jinjingxu/exps/train/mvp3r/results/unisfm/unfzD_SCARED_b3accu1_posetr_net_reloc3r_9D_OPTTranse01_ROTAng01_Loss_regTrMagWt0_regRotAngMagWt0_386to386rather4096_depthScratchDAM_motionDftFlow_allRegLoss_doubleB_loss2weight100_tanhandclampSample_deltaMax001/0918-212235/models/weights_4'\n",
-    "traiend_models_root = '/mnt/nct-zfs/TCO-Test/jinjingxu/exps/train/mvp3r/results/unisfm/new_batch/b3accu4_scaredExcelSM_MonFast3r_trainedNfzD/1010-145110/models/weights_4'\n",
+    "# traiend_models_root = '/mnt/nct-zfs/TCO-Test/jinjingxu/exps/train/mvp3r/results/unisfm/new_batch/b3accu4_scaredExcelSM_MonFast3r_trainedNfzD/1010-145110/models/weights_4'\n",
     "\n",
     "print('pose_model_type:', opts.pose_model_type)\n",
     "if opts.pose_model_type == \"separate_resnet\":\n",
@@ -117,7 +121,7 @@
     "    # # trainer.models[\"motion_raft_flow\"].load_state_dict(motion_flow_model_dict)\n",
     "    # # trainer.models[\"raft_flow\"].load_state_dict(motion_flow_model_dict)\n",
     "    # print(f\"loaded motion_flow_model from {motion_flow_model_path}\")\n",
-    "elif opts.pose_model_type == \"endofast3r\":\n",
+    "elif opts.pose_model_type == \"endofast3r\" or opts.pose_model_type == \"posetr_net\":\n",
     "    # load trained models for evaluation\n",
     "    # refer to how resumed training is implemented in train_end_to_end.py\n",
     "    \n",
@@ -322,7 +326,7 @@
     "\n",
     "        # if (self.epoch + 1) % self.opt.save_frequency == 0:\n",
     "        #     self.save_model()\n",
-    "        # break\n",
+    "        break\n",
     "    \n",
     "\n",
     "\n",
