fix model loading bug

--- a/train_online.ipynb
+++ b/train_online.ipynb
@@ -35,12 +35,14 @@
     "    # '--batch_size', '10', \n",
     "    '--enable_motion_computation', \n",
     "    '--use_raft_flow',\n",
+    "    '--depth_model_type', 'dam', \n",
+    "    '--depth_model_type', 'unisfm_depth', \n",
+    "    '--depth_model_type', 'endofast3r_depth_trained_dbg',\n",
     "    '--pose_model_type', 'endofast3r', \n",
     "    '--pose_model_type', 'posetr_net', \n",
     "    '--frame_ids', '0', '-4', '4',\n",
     "    '--frame_ids', '0', '-1', '1',\n",
     "    '--dataset', 'StereoMIS',\n",
-    "    '--split_appendix', '_offline',\n",
     "    '--data_path', '/mnt/nct-zfs/TCO-All/SharedDatasets/StereoMIS_DARES_test/',\n",
     "    '--dataset', 'DynaSCARED',\n",
     "    '--split_appendix', '_CaToTi001',\n",
@@ -48,7 +50,7 @@
     "    # '--split_appendix', '_CaToTi010',\n",
     "    '--data_path', '/mnt/cluster/datasets/Surg_oclr_stereo/',\n",
     "    '--dataset', 'StereoMIS',\n",
-    "    '--split_appendix', '_offline',\n",
+    "    '--split_appendix', '_4cases_trn',\n",
     "    '--data_path', '/mnt/nct-zfs/TCO-All/SharedDatasets/StereoMIS_DARES_test/',\n",
     "    '--motion_mask_thre_px', '1',\n",
     "    # '--frame_ids', '0', '-1', '1',\n",
@@ -95,8 +97,8 @@
     "traiend_models_root = '/mnt/nct-zfs/TCO-Test/jinjingxu/exps/train/mvp3r/results/unisfm/unfzD_SCARED_b3accu1_posetr_net_reloc3r_9D_OPTTranse01_ROTAng01_Loss_regTrMagWt0_regRotAngMagWt0_386to386rather4096_depthScratchDAM_motionDftFlow_allRegLoss_doubleB_loss2weight100_tanhandclampSample_deltaMax001/0918-212235/models/weights_4'\n",
     "traiend_models_root = '/mnt/nct-zfs/TCO-Test/jinjingxu/exps/train/mvp3r/results/unisfm/new_batch/b3accu4_scaredExcelSM_MonFast3r_trainedNfzD/1010-145110/models/weights_4'\n",
     "traiend_models_root = '/mnt/nct-zfs/TCO-Test/jinjingxu/exps/train/mvp3r/results/unisfm/new_batch/b3accu4_scaredcorrectedExcelSM_posetr_fzenc_trainedNfzD/1013-104014/models/weights_3'\n",
-    "trained_models_root = '/mnt/nct-zfs/TCO-Test/jinjingxu/exps/train/mvp3r/results/unisfm/new_batch/b3accu4_scaredcorrectedExcelSM_posetr_fzenc_trainedNfzD_dft_DAonly/1014-185504/models/weights_4'\n",
-    "trained_models_root = '/mnt/nct-zfs/TCO-Test/jinjingxu/exps/train/mvp3r/results/unisfm/new_batch/b3accu4_scaredcorrectedExcelSM_posetr_fzenc_trainedNfzD_learnedMskTrePx1_learnedlossR2Weight1_reproj2only/1014-173620/models/weights_4'\n",
+    "traiend_models_root = '/mnt/nct-zfs/TCO-Test/jinjingxu/exps/train/mvp3r/results/unisfm/new_batch/b3accu4_scaredcorrectedExcelSM_posetr_fzenc_trainedNfzD_dft_DAonly/1014-185504/models/weights_4'\n",
+    "traiend_models_root = '/mnt/nct-zfs/TCO-Test/jinjingxu/exps/train/mvp3r/results/unisfm/new_batch/b3accu4_scaredcorrectedExcelSM_posetr_fzenc_trainedNfzD_learnedMskTrePx1_learnedlossR2Weight1_reproj2only/1014-173620/models/weights_4'\n",
     "\n",
     "\n",
     "print('pose_model_type:', opts.pose_model_type)\n",
@@ -142,7 +144,7 @@
     "        else:\n",
     "            print(f\"Warning: {model_name}.pth not found, skipping...\")\n",
     "    \n",
-    "    print(\"EndoFASt3r model loading completed!\")\n",
+    "    print(f\"{opts.pose_model_type} model loading completed!\")\n",
     "\n",
     "else:\n",
     "    assert False, \"pose_model_type should be separate_resnet or posetr_net\"\n",
@@ -330,7 +332,7 @@
     "\n",
     "        # if (self.epoch + 1) % self.opt.save_frequency == 0:\n",
     "        #     self.save_model()\n",
-    "        # break\n",
+    "        break\n",
     "    \n",
     "\n",
     "\n",
